--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "rollup -c -w"
   },
   "dependencies": {
+    "rollup-plugin-dts": "^6.1.1",
     "swr": "^2.0.0"
   },
   "peerDependencies": {
@@ -25,17 +26,14 @@
     "react-dom": ">= 18.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^12.1.0",
     "@supabase/postgrest-js": "^1.16.2",
     "@supabase/supabase-js": "^2.45.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.24.0",
-    "rollup-plugin-sass": "^1.13.2",
-    "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.6.2"
   },
   "files": [
