--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,42 @@
 {
   "compilerOptions": {
+    // Output configuration
     "outDir": "dist",
+    "declarationDir": "dist/dts",
+    // Module and target configuration
     "module": "esnext",
     "target": "es5",
-    "lib": ["es6", "dom", "es2016", "es2017"],
-    "sourceMap": true,
-    "allowJs": false,
+    "lib": [
+      "es6",
+      "dom",
+      "es2016",
+      "es2017"
+    ],
     "jsx": "react",
-    "declaration": true,
     "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noImplicitAny": true,
+    // Compilation options
+    "sourceMap": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    // Strict type checking
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noImplicitReturns": true,
+    // Code quality checks
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "forceConsistentCasingInFileNames": true,
+    // JavaScript handling
+    "allowJs": false,
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "dist", "example", "rollup.config.js"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "example",
+    "rollup.config.js"
+  ]
 }
